# py-spectrogram-tools

./: LICENSE  README.md  pyproject.toml  requierments.txt  requirements.txt  setup.py  spectrogram.py
.github/: dependabot.yml
.github/workflows/: Auto format.yml  Buid-release.yml  publish.yml  pypi-publish.yml  python-package.yml  python-publish.yml  release-on-merge.yml
examples/: audio_manipulation.py  basic_workflow.py  batch_processing.py  batch_wav.py  load_wav.py  record_duration.py  record_infinite.py
pyspectools/: __init__.py  spectrogram.py
pyspectools2/: __init__.py  spectrogram.py
pyspectools2/scripts/: bump_version.py
scripts/: bump_version.py
tests/: test_audio_processing.py  test_packaging_metadata.py  test_spectrogram.py  test_utils.py  test_versioning.py  test_wav_io.py  test_wav_processing.py
