[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyspectools2"
dynamic = ["version"]
description = "A library for recording and plotting spectrograms from audio data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sviatoslav Z.", email = "slawekzhukovski@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib",
    "numpy",
    "sounddevice",
]

[tool.hatch.version]
source = "vcs"
path = "pyspectools2/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pyspectools2",
]
